@@ -29,6 +29,7 @@ NEW: Ticket#680 - Added TCacheHttpSession (Carl, Qiang)
 NEW: Added TTabPanel (Qiang)
 NEW: Added TKeyboard (Qiang)
 NEW: Added TCaptcha and TCaptchaValidator (Qiang)
+NEW: Added TCachePageStatePersister (Qiang)
 NEW: Added TSlider (Christophe)
 NEW: Added Indonesian translation to QuickStart, requirements and error messages (Zaenal Mutaqin)
 NEW: Added French translation to the blog tutorial (Eric Marchetti)
